assets/css/style.css
/*basic styling*/
@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');

:root {
    --off-white: #F5F5F5;
    --mid-red: #D30731;
    --dk-red: #630316;
    --mid-green: #00A334;
    --dk-green: #00290D;
    --max-width: 1500px;
}

body {
    font-family: 'Karla', sans-serif;
    background-color: var(--off-white);
    max-width: var(--max-width);
}

.content-wrapper {
    height: 100vh;
}

nav {
    margin-left: auto;
    margin-right: auto;
    max-width: var(--max-width);
}
    
/*header*/
header {
    border-bottom: 5px solid var(--mid-green);
    color: var(--mid-red);
    position: absolute;
    top: 0;
    width: 100%;
    height: 6%;
}

@media only screen and (max-height: 600px) {
    header {
        height: 8%;
    }
}

.title {
    font-size: 1rem;
    font-weight: bold;
}

#how-to {
    font-size: small;
    margin-right: 5%;
}

#how-to:hover {
    text-decoration: underline;
    cursor: pointer;
}

#how-to-text {
    display: none;
    background-color: var(--off-white);
    max-width: var(--max-width);
    margin-left: 5%;
    margin-right: 5%;
    text-align: center;
    border: 5px solid var(--mid-green)
}

/*main game section*/
#game-container {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    max-width: var(--max-width);
    height: 90vh;
}

.game {
    padding-top: 50px;
    height: 90vh;
}

#btn-play {
    position: absolute;
    color: var(--dk-green);
    border: 5px solid var(--mid-green);
    background-color: var(--off-white);
    font-size: 3rem;
    font-weight: 600;
}

#btn-play:hover {
    font-size: 3.5rem;
    cursor: pointer;
}

.row {
    display: flex;
    justify-content: space-between;
}

.card {
    display: inline-block;
    width: 30%;
    height: 15vh;
    margin: 1%;
    background: var(--dk-green) url("../images/daffodils.jpg") no-repeat center center;
    background-size: cover;
}

.card:hover {
    animation-name: hover-zoom;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
    cursor: pointer;
}

.hidden {
    display: none;
}

@keyframes hover-zoom {
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.1);
    }
}

/*footer*/

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    text-align: center;
    height: 7%;
    background-color: var(--off-white);
    padding-bottom: 3%;
}

.score {
    color: var(--dk-green);
    font-weight: bold;
    font-size: 1.5rem;
}

